<!--
  ~ Copyright {2017} {Aashrey Kamal Sharma}
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Sublime Stills</string>
    <string name="title_sublime_stills">Sublime Stills</string>
    <string name="title_settings">Settings</string>

    <string name="title_menu_stream">Stream</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_add_collection">Add Collections</string>

    <string name="title_menu_share_photo">Share Photo</string>
    <string name="title_menu_share_link">Share Link</string>
    <string name="title_menu_copy_link">Copy Link</string>

    <string name="title_stats_for_shutterbugs">Stats for Shutterbugs</string>

    <string name="title_photo_by">Photo by %1$s / %2$s</string>
    <string name="title_photo_by_only_service_name">Photo by %s</string>

    <string name="title_collections">Collections</string>

    <string name="resolution_formatted_string">%1$d x %2$d</string>

    <string name="title_image_link_clipboard_label">Photo Link</string>
    <string name="confirmation_link_copied">Link copied</string>

    <string name="title_share_link">Share link with</string>
    <string name="title_share_photo">Share photo with</string>

    <string name="share_file_template">%1$s created by @%2$s, see more of their content at %3$s</string>
    <string name="share_file_template_nouserurl">%1$s created by @%2$s</string>

    <string name="share_text_template">"%1$s" - "%2$s"</string>
    <string name="share_text_template_notitle">"%1$s"</string>
    <string name="share_set_as_title">Set as</string>
    <string name="share_more_options">Lock Screen and Others</string>

    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_try_again">Try Again</string>
    <string name="action_undo">Undo</string>
    <string name="action_continue">Continue</string>

    <string name="hint_collection_search">Try the suggestions below</string>

    <string name="error_generic">Photos could not be loaded</string>
    <string name="error_no_connectivity">Please enable WiFi or Mobile Data to load photos</string>
    <string name="error_slow_connectivity">Your connection is poor\nLoading photos will take longer than usual</string>
    <string name="hint_end_of_collection">You\'ve reached the end of this collection</string>

    <string name="title_find_a_collection">Find a Collection</string>

    <string name="hint_add_favorites">Your favorites are displayed here\nTap an empty heart on an photo to favorite it</string>
    <string name="hint_collection">Collections are a set of photos which follow a common theme.</string>
    <string name="hint_image_actions">You can favorite, set your wallpaper and share this photo by clicking the buttons below</string>

    <string name="title_snackbar_favorite_removed">Favorite removed</string>

    <string name="hint_reorder_collection">Drag and drop to reorder</string>

    <string name="settings_title_user_tips">User Tips</string>
    <string name="settings_title_themes">Themes</string>
    <string name="settings_option_theme_dark">Dark Mode</string>
    <string name="settings_option_auto_theme_dark">Automatically use Dark Mode</string>

    <string name="settings_show_tips_again">Show Tips Again</string>
    <string name="settings_show_onboarding_again">Show Onboarding Again</string>

    <string name="confirmation_show_tips_again">Tips will be shown again</string>
    <string name="confirmation_show_onboarding_again">Onboarding will be shown when Sublime Stills is restarted</string>

    <string name="title_searching">Searching…</string>

    <string name="title_loading_suggested_collections"></string>

    <string name="title_onboarding_subtitle">Discover breathtaking photos and wallpapers</string>

    <string name="title_onboarding_pick_collections">Choose a few collections to get started</string>

    <string name="title_featured_collections">Featured Collections</string>

    <string name="title_results_for_collection">Results for %s</string>

    <string name="toast_wallpaper_changed">Wallpaper changed successfully</string>
    <string name="toast_wallpaper_change_not_allowed">Not allowed to change Wallpaper</string>
    <string name="toast_could_not_set_walllaper">Could not set Wallpaper</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_set">Set</string>
    <string name="action_share">Share</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
