<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright {2017} {Aashrey Kamal Sharma}
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aashreys.walls.application.activities.AddCollectionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_collection"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:hint="@string/title_find_a_collection"
            android:imeOptions="actionSearch"
            android:inputType="textAutoCorrect"/>

        <LinearLayout
            android:id="@+id/parent_search_progress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xs"
            android:layout_marginBottom="@dimen/spacing_xs"
            android:layout_marginTop="@dimen/spacing_medium"
            android:animateLayoutChanges="true"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/height_xs"
                android:layout_height="@dimen/height_xs"
                android:layout_marginRight="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/text_search_status"
                style="@style/Sublime.Text.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLines="1"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:fadingEdgeLength="@dimen/spacing_xs"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <com.wefika.flowlayout.FlowLayout
                android:id="@+id/parent_collections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="invisible"/>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/action_cancel"/>

            <Button
                android:id="@+id/button_action"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:text="@string/action_search"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
